tests/errors/scope/test.c
#include <stdio.h>

int a = 5;
int main(){
    {
        int a = 6;
        printf(a);
    }
    return 5.4;
}
